compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__float_sized.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1.1:float-32>>\n}\n"
---
module rec my.``mod``

let private go () = begin
    BitArray.Create(
        { endianness = None; size = Some(32L); unit = None; signed = None; value = BitArraySegmentValue.Float(1.1) }
    )
end
