compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__match_signed.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:signed>> = x\n  a\n}\n"
---
module rec my.``mod``

let private go (x: BitArray) = begin
    let (BitArray.Sections [] [BitArraySegment.Int64(a)]) = x
    a
end
