compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__match_sized.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:16, b:8>> = x\n  a\n}\n"
---
module rec my.``mod``

let private go (x: BitArray) = begin
    let (BitArray.Sections [16L; 8L] ([BitArraySegment.WithLength(16L) as a; BitArraySegment.WithLength(8L) as b], None)) = x
    a
end
