compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__match_unsigned.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:unsigned>> = x\n  a\n}\n"
---
module rec my.``mod``

let private go (x: BitArray) = begin
    let (BitArray.Sections [] [BitArraySegment.UnsignedInt64(a)]) = x
    a
end
