compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__negative_size.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1:size(-1)>>\n}\n"
---
module rec my.``mod``

let private go () = begin
    BitArray.Create(
        { endianness = None; size = Some(-1L); unit = None; signed = None; value = BitArraySegmentValue.Int(1L) }
    )
end
