compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__not_byte_aligned_variable.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go() {\n  let x = 4\n  <<256:size(x)>>\n}\n"
---
module rec my.``mod``

let private go () = begin
    let x = 4L
    BitArray.Create(
        { endianness = None; size = Some(x); unit = None; signed = None; value = BitArraySegmentValue.Int(256L) }
    )
end
